--- a/themes/nouveau/templates/base.html
+++ b/themes/nouveau/templates/base.html
@@ -39,7 +39,7 @@
 </head>
 
 <body bgcolor="#C0C0C0">
-	<h1><a href="{{ SITEURL }}/">{{ SITENAME }}</a></h1>
+	<h1><img src="/theme/images/computer.gif" alt="It's IN the computer?"><a href="{{ SITEURL }}/">{{ SITENAME }}</a></h1>
 	{% if SITESUBTITLE %}<p>{{ SITESUBTITLE }}</p>{% endif %}
 	<hr>
 
