--- a/themes/nouveau/templates/article.html
+++ b/themes/nouveau/templates/article.html
@@ -35,35 +35,8 @@
  {{ translations.translations_for(article) }}
   </header>
   {{ article.content }}
-  <footer>
-    <p>Published: <time datetime="{{ article.date.isoformat() }}">
-      {{ article.locale_date }}
-    </time></p>
-    {% if article.modified %}
-    <p>Last updated: <time datetime="{{ article.modified.isoformat() }}">
-      {{ article.locale_modified }}
-    </time></p>
-    {% endif %}
-    {% if article.authors %}
-    <address>
-      By {% for author in article.authors %}
-          <a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
-        {% endfor %}
-    </address>
-    {% endif %}
-    {% if article.category %}
-    <p>
-        Category: <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
-    </p>
-    {% endif %}
-    {% if article.tags %}
-    <p>
-        Tags:
-        {% for tag in article.tags %}
-            <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
-        {% endfor %}
-    </p>
-    {% endif %}
-  </footer>
-  </article>
+
+
+  <em>Posted on <time datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time> {% if article.modified %}(Lasted Updated: <time datetime="{{ article.modified.isoformat() }}">{{ article.locale_modified }}</time>){% endif %}{% if article.category %} in <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>{% endif %}{% if article.tags %} with the tags: {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> {% endfor %}{% endif %}</em>
+</article>
 {% endblock %}
